tests/NormalTests/paczka2/big_fuzzy/57081063.err
Error in line 3: lfR3 S793 54,2
Error in line 10: Z6UapPYaKm S612 11,4
Error in line 14: Z6UapPYaKm S628 85,7
Error in line 17: S612 A843 61,6
Error in line 22: 5OP S612 353,9
Error in line 23: YWD S793 77,0
Error in line 27: lyJlM S628 42,7
Error in line 57: lfR3 S612 28,4
Error in line 65: 5OP S612 84,7
Error in line 68: YWD S612 12,0
Error in line 66: 5OP S793 18,3
Error in line 62: S612 S612 19,0
Error in line 70: 5OP S612 59,1
Error in line 69: YWD S628 93,8
Error in line 75: YWD S612 1,5
Error in line 77: S612 S612 11,1
Error in line 88: lyJlM S628 289,7
Error in line 90: lyJlM A843 82,7
Error in line 94: 5OP S628 39,9
Error in line 103: Z6UapPYaKm S793 8,7
Error in line 128: 5OP S793 18,23
Error in line 127: 5OP S612 311,0
Error in line 108: S612 S628 97,0
Error in line 119: Z6UapPYaKm S793 21,6
Error in line 149: S612 S793 77,7
Error in line 156: 5OP S628 40,5
Error in line 164: lfR3 S793 95,4
Error in line 158: S612 S628 39,2
Error in line 168: pHX S628 53,7
Error in line 181: Z6UapPYaKm A843 83,4
Error in line 185: Z6UapPYaKm S62 99,6
Error in line 188: lfR3 S793 1S,6
Error in line 186: Z6UapPYaKm S628 3,0
Error in line 189: Z6UapPYaKm A843 10,6
Error in line 205: Z6UapPYaKm S628 -1,4
Error in line 208: Z6UapPYaKm S628 86,1
Error in line 191: YWD S612 21,5
Error in line 210: YWD A843 58,8
Error in line 200: 5OP A843 0,0
Error in line 229: pHX S628 96,7
Error in line 195: lfR3 S793 31,0
Error in line 214: YWD S612 36,7
Error in line 237: S612 A843 55,5
Error in line 240: YWD A843 11,0
